--- a/index.html
+++ b/index.html
@@ -9,19 +9,18 @@
   </head>
   <body>
     <div class="container">
-
       <div class="title-bar">
-        <h2></h2>
+        <h1>1977 <span>STAR WARS</span> Line Up &trade;</h1>
       </div>
 
       <div class="nav"></div>
 
-      <h3></h3>
+      <h2></h2>
 
       <div class="player-cards"></div>
 
       <div class="matches">
-        <h3></h3>
+        <h2></h2>
         <div class=""></div>
         <div class=""></div>
         <div class=""></div>
