Set basic structure of page

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <link href="https://fonts.googleapis.com/css?family=Rubik+Mono+One|Rubik+One" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Rubik+Mono+One|Rubik+One|Rubik" rel="stylesheet">
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="main.css">
     <title>Star Wars Line Up</title>
@@ -10,22 +10,69 @@
   <body>
     <div class="container">
       <div class="title-bar">
-        <h1>1977 <span>STAR WARS</span> Line Up &trade;</h1>
+        <h1>1977 <img src="images/Star_Wars_Yellow_Logo.svg" class="title-logo" alt="Star Wars logo"/> Rebel All-Stars<span>&trade;</span></h1>
       </div>
 
-      <div class="nav"></div>
-
-      <h2></h2>
-
-      <div class="player-cards"></div>
-
-      <div class="matches">
-        <h2></h2>
-        <div class=""></div>
-        <div class=""></div>
-        <div class=""></div>
-        <div class=""></div>
+      <div class="nav">
+        <img class="nav-icon" src="images/bobafet-icon.png" alt="">
+        <img class="nav-icon" src="images/c3p0-icon.png" alt="">
+        <img class="nav-icon" src="images/chewie-icon.png" alt="">
+        <img class="nav-icon" src="images/darth-icon.png" alt="">
+        <img class="nav-icon" src="images/deathstar-icon.png" alt="">
+        <img class="nav-icon" src="images/falcon-icon.png" alt="">
+        <img class="nav-icon" src="images/r2d2-icon.png" alt="">
+        <img class="nav-icon" src="images/stormtrooper-icon.png" alt="">
+        <img class="nav-icon" src="images/leia-icon.png" alt="">
       </div>
+
+      <h2>STATISTICS</h2>
+      <div class="presented-by-banner">
+        <p>Presented by: <img class="jedi-name-logo jedi-logo" src="images/jedi-name-logo.svg"/><img class="jedi-saber-logo jedi-logo" src="images/jedi-saber-logo.png"/></p>
+      </div>
+
+      <section class="all-star-cards">
+        <div class="hero-card luke-card">
+          <div class="hero-banner"></div>
+          <div class="hero-picture luke-pic"></div>
+          <h3 class=""></h3>
+          <p></p>
+          <p></p>
+          <hr>
+          <p class:"card-footer"><img src="" alt="Rebel icon">Luke SKYWALKER</p>
+        </div>
+
+        <div class="hero-card han-card">
+          <div class="hero-banner"></div>
+          <div class="hero-picture han-pic"></div>
+          <h3 class=""></h3>
+          <p></p>
+          <p></p>
+          <hr>
+          <p class:"card-footer"><img src="" alt="Rebel icon"></p>
+        </div>
+        <div class="hero-card leia-card">
+          <div class="hero-banner"></div>
+          <div class="hero-picture leia-pic"></div>
+          <h3 class=""></h3>
+          <p></p>
+          <p></p>
+          <hr>
+          <p class:"card-footer"><img src="" alt="Rebel icon"></p>
+        </div>
+        <div class="hero-card chewie-card">
+          <div class="hero-banner"></div>
+          <div class="hero-picture chewie-pic"></div>
+          <h3 class=""></h3>
+          <p></p>
+          <p></p>
+          <hr>
+          <p class:"card-footer"><img src="" alt="Rebel icon"></p>
+        </div>
+
+        </div>
+      </section>
+
+
     </div>
   </body>
 </html>
