Refine Hero card layout for mobile

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link href="https://fonts.googleapis.com/css?family=Rubik+Mono+One|Rubik+One|Rubik" rel="stylesheet">
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="main.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Star Wars Line Up</title>
   </head>
   <body>
@@ -32,41 +33,59 @@
 
       <section class="all-star-cards">
         <div class="hero-card luke-card">
-          <div class="hero-banner"></div>
+          <div class="hero-banner"><p>Calrissian mustafar</p></div>
           <div class="hero-picture luke-pic"></div>
-          <h3 class=""></h3>
-          <p></p>
-          <p></p>
+          <div class="hero-stats">
+            <h3 class="number">33</h3>
+            <p>Jabba palpatine </p>
+            <p>endor darth hutt</p>
+          </div>
           <hr>
-          <p class:"card-footer"><img src="" alt="Rebel icon">Luke SKYWALKER</p>
+          <div class="hero-card-footer">
+            <p class:"card-footer"><img src="images/rebel-alliance-logo.png" alt="Rebel icon">Luke SKYWALKER</p>
+          </div>
         </div>
 
         <div class="hero-card han-card">
-          <div class="hero-banner"></div>
+          <div class="hero-banner"><p>Darth naboo hutt</p></div>
           <div class="hero-picture han-pic"></div>
-          <h3 class=""></h3>
-          <p></p>
-          <p></p>
+          <div class="hero-stats">
+            <h3 class="">58</h3>
+            <p>mothma</p>
+            <p> baba coruscant</p>
+          </div>
           <hr>
-          <p class:"card-footer"><img src="" alt="Rebel icon"></p>
+          <div class="hero-card-footer">
+            <p class:"card-footer"><img src="images/rebel-alliance-logo.png" alt="Rebel icon">Han SOLO</p>
+          </div>
         </div>
+
         <div class="hero-card leia-card">
-          <div class="hero-banner"></div>
+          <div class="hero-banner"><p>Binks jinn solo</p></div>
           <div class="hero-picture leia-pic"></div>
-          <h3 class=""></h3>
-          <p></p>
-          <p></p>
+          <div class="hero-stats">
+            <h3 class="">7</h3>
+            <p>Jabba </p>
+            <p>baba wookiee</p>
+          </div>
           <hr>
-          <p class:"card-footer"><img src="" alt="Rebel icon"></p>
+          <div class="hero-card-footer">
+            <p class:"card-footer"><img src="images/rebel-alliance-logo.png" alt="Rebel icon">Leia   ORGANA</p>
+          </div>
         </div>
+
         <div class="hero-card chewie-card">
-          <div class="hero-banner"></div>
+          <div class="hero-banner"><p>Jango dantooine organa</p></div>
           <div class="hero-picture chewie-pic"></div>
-          <h3 class=""></h3>
-          <p></p>
-          <p></p>
+          <div class="hero-stats">
+            <h3 class="">42</h3>
+            <p>Kenobi mon</p>
+            <p>biggs owen skywalker</p>
+          </div>
           <hr>
-          <p class:"card-footer"><img src="" alt="Rebel icon"></p>
+          <div class="hero-card-footer">
+            <p class:"card-footer"><img src="images/rebel-alliance-logo.png" alt="Rebel icon">CHEWBACCA</p>
+          </div>
         </div>
 
         </div>
