Adjust layout for 600px

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           <div class="hero-banner"><p>Calrissian mustafar</p></div>
           <div class="hero-picture luke-pic"></div>
           <div class="hero-stats">
-            <h3 class="number">33</h3>
+            <h3 class="number">33%</h3>
             <p>Jabba palpatine </p>
             <p>endor darth hutt</p>
           </div>
@@ -78,7 +78,7 @@
           <div class="hero-banner"><p>Jango dantooine organa</p></div>
           <div class="hero-picture chewie-pic"></div>
           <div class="hero-stats">
-            <h3 class="">42</h3>
+            <h3 class="">42%</h3>
             <p>Kenobi mon</p>
             <p>biggs owen skywalker</p>
           </div>
@@ -87,7 +87,9 @@
             <p class:"card-footer"><img src="images/rebel-alliance-logo.png" alt="Rebel icon">CHEWBACCA</p>
           </div>
         </div>
+        <section class="footer-">
 
+        </section>
         </div>
       </section>
 
